--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NASA API</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
+
 <body>
     
+    
+
+    <script type="text/javascript" src="app.js"></script>
+
 </body>
+
 </html>
